apps/cla-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "cla-frontend"
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: "cla-frontend"
