apps/cla-frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cla-frontend-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: cla-frontend.apps.cloud-platforms-sandbox.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cla-frontend-svc
          servicePort: 80
